@@ -27,7 +27,9 @@ class SqlCollectionDBusHandler : public QObject
     Q_OBJECT
     Q_CLASSINFO( "SQL Collection D-Bus Interface", "org.kde.amarok.SqlCollection" )
     public:
-        SqlCollectionDBusHandler( SqlCollection *coll );
+        SqlCollectionDBusHandler( QObject *parent );
+
+        void setCollection( SqlCollection *collection ) { m_collection = collection; }
 
     public slots:
         bool isDirInCollection( const QString& path );
